# Katya_AI_REChain_Mesh

./: .arab-countries.yml  .australia.yml  .bitbucket-pipelines.yml  .brazil.yml  .build.yml  .builds.yml  .canada.yml  .china.yml  .dockerignore  .drone.yml  .editorconfig  .france.yml  .germany.yml  .gitea-workflows-ci-clean.yml  .gitea-workflows-ci.yml  .gitflic-ci-clean.yml  .gitflic-ci.yml  .gitflic.yml  .gitignore  .gitlab-ci-advanced.yml  .gitlab-ci.yml  .gitverse-ci-clean.yml  .gitverse-ci.yml  .gitverse.yml  .india.yml  .indonesia.yml  .israel.yml  .italy.yml  .japan.yml  .korea.yml  .mexico.yml  .netherlands.yml  .nigeria.yml  .russia-domestic.yml  .russia-extended.yml  .singapore.yml  .sourcecraft-ci-clean.yml  .sourcecraft-ci.yml  .sourcecraft.yml  .south-africa.yml  (+97 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codeql-config.yml  dependabot.yml
android/: README.md  README_PERMISSIONS.md  gradle.properties
ansible/: deploy.yml
aurora/: CMakeLists.txt  README.md  build.gradle  katya-ai-rechain-mesh.apparmor  katya-ai-rechain-mesh.desktop  katya-ai-rechain-mesh.service
aurora_support/: README_AURORA.md  packaging_instructions.md  rpm_build_steps.md  specfile.spec  specfile_patch.patch
backend/: Dockerfile  pubspec.yaml
config/: backend_config.json
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/include/mesh/: core.h  crypto.h
cpp/include/mesh/broker/: broker.hpp
cpp/include/mesh/crypto/: handshake.hpp
cpp/include/mesh/protocol/: message.hpp
cpp/src/core/: core.cpp
cpp/src/crypto/: crypto.cpp
cpp/src/main/: broker_main.cpp
docker/: default.conf  nginx.conf
docs/: ADMIN_GUIDE.md  ANDROID_PLATFORM_IMPLEMENTATION.md  API_REFERENCE.md  AURORA_OS_PLATFORM_GUIDE.md  AURORA_OS_PLATFORM_IMPLEMENTATION.md  AURORA_PLATFORM_GUIDE.md  BACKUP_RECOVERY.md  BRANCHING_STRATEGY.md  CANADIAN_PLATFORM_IMPLEMENTATION.md  CODE_REVIEW_GUIDELINES.md  CONTRIBUTING.md  DOCS_INDEX.md  FAQ.md  GIT_SYSTEMS_GUIDE.md  GLOSSARY.md  HARMONYOS_PLATFORM_GUIDE.md  HARMONYOS_PLATFORM_IMPLEMENTATION.md  INCIDENT_RESPONSE.md  INDEX.md  IOS_PLATFORM_GUIDE.md  IOS_PLATFORM_IMPLEMENTATION.md  LINUX_PLATFORM_GUIDE.md  LINUX_PLATFORM_IMPLEMENTATION.md  MACOS_PLATFORM_GUIDE.md  MACOS_PLATFORM_IMPLEMENTATION.md  MANIFEST_EN.md  MANIFEST_RU.md  MIGRATION_GUIDE.md  MONITORING_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  POST_ONLINE_SYNC.md  PRESS_RELEASE_EN.md  PRESS_RELEASE_RU.md  PROMPT_LIBRARY.md  RELEASE_PROCESS.md  SECURITY_AUDIT_PROCEDURE.md  SUPPORT.md  TESTING_GUIDE.md  TIZEN_PLATFORM_IMPLEMENTATION.md  TROUBLESHOOTING.md  (+8 more)
fastlane/: Appfile  Fastfile
git_systems/: README.md
go/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod
harmonyos/: AndroidManifest.xml  CMakeLists.txt  build.gradle  katya-ai-rechain-mesh.apparmor  katya-ai-rechain-mesh.desktop  katya-ai-rechain-mesh.service
helm/: Chart.yaml  values.yaml
ios/: README.md  build.gradle
k8s/: README.md  deployment.yml  mesh-broker-deployment.yaml  monitoring.yml  security.yml
lib/: app.dart  firebase_options.dart  main.dart
linux/: CMakeLists.txt  README.md  build.gradle  katya-ai-rechain-mesh.apparmor  katya-ai-rechain-mesh.desktop  katya-ai-rechain-mesh.service
macos/: README.md  build.gradle
rust/: Cargo.toml
rust/src/: core.rs  crypto.rs  error.rs  ffi.rs  lib.rs  network.rs  protocol.rs  types.rs
(+421 files in other folders)
