[package]
name = "katya-mesh"
version = "0.1.0"
edition = "2021"
description = "High-performance mesh networking library in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.4"
parking_lot = "0.12"
crossbeam = "0.8"

# Crypto dependencies
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "1.0", features = ["serde"] }
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
ring = "0.16"

# Networking
tokio-stream = "0.1"
socket2 = "0.4"

# FFI support
libc = "0.2"

[dev-dependencies]
criterion = "0.4"
proptest = "1.0"

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "networking_bench"
harness = false

[lib]
name = "katya_mesh"
path = "src/lib.rs"

[[bin]]
name = "katya-mesh-node"
path = "src/bin/node.rs"

[[bin]]
name = "katya-mesh-cli"
path = "src/bin/cli.rs"
